@@ -5,6 +5,7 @@
   * Fix empty KDUMP_SAVEDIR line when replacing the symbolic link with the
     absolute path.
   * Don't set sysctl kernel.unknown_nmi_panic=1 by default.
+  * Mention kernel.panic_on_unrecovered_nmi in the kdump(7) manpage.
 
 0.7.1
 -----
